# code_base

./: LICENSE  README.md  合同.xlsx
LimisQuery/: .gitignore  README.md  limis_client.py  query_report.py
ReportDesk/: DEPLOY.md  README.md  app.py  requirements.txt
ReportDesk/core/: __init__.py  association_retry.py  batch_worker.py  constants.py  contract_paths.py  date_format.py  decode_pool.py  decode_worker.py  decoded_snapshot.py  field_map.py  item_finalize.py  mp_worker.py  normalize.py  organizer.py  pipeline.py  qr_input.py
ReportDesk/db/: __init__.py  connection.py  import_contracts.py  repository.py  schema.sql  schema_v2.sql  search.py
ReportDesk/gui/: __init__.py  date_picker.py  dnd.py  image_preview.py  main_window.py  organize_tab.py  query_page.py  settings_dialog.py
ReportDesk/tests/: test_association_retry.py  test_contracts.py  test_core.py  test_date_format.py  test_decoded_snapshot.py  test_field_map.py  test_field_map_ocr.py  test_organizer.py  test_search.py
ScanReport/: .gitignore  README.md  main.py  requirements.txt  test_parse_association.py
ScanReport/docs/: DEVELOPMENT.md
ScanReport/scraped_js/: AntiFakeReportQuery.aspx.js  ReportDHTML.js  ServiceMenu.ascx.js  slidedownMenu_slidedownMenu.js
ScanReport/scripts/: download_paddleocr.ps1
ScanReport/src/: decode_pipeline.py  jktac_codec.py  ocr_client.py  ocr_json_util.py  paddleocr_client.py  (+10 more)
video-ocr/: .gitignore  README.md  pyproject.toml
video-ocr/tests/: test_regex_extract.py
video-ocr/video_ocr/: __init__.py  models.py  paddle_ocr_video.py  regex_extract.py
(+5 files in other folders)
