[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "video-ocr"
version = "0.1.0"
description = "Video watermark text extraction with PaddleOCR and regex fields."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "numpy>=1.23",
  "opencv-python-headless>=4.8.0",
  "paddleocr>=2.7.0.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["video_ocr*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
